--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ td - table data (dados) -->
         </tr>
 
         <tr>
-            <td>Bermuda</td>
+            <td>Calça Jeans</td>
             <td>Azul</td>
             <td>P</td>
             <td>R$ 160.00</td>
