--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ td - table data (dados) -->
         
         <tr>
             <td>Camiseta</td>
-            <td>Preta</td>
+            <td>Vermelha</td>
             <td>M</td>
             <td>R$ 80.00</td>
             <td>Em estoque</td>
